# NCEPLIBS-w3emc

./: CMakeLists.txt
.github/workflows/: Intel.yml  Linux_options.yml  Linux_versions.yml  MacOS.yml  Spack.yml  developer.yml
docs/: Doxyfile.in  user_guide.md
spack/: package.py
src/: CMakeLists.txt  aea.f  errexit.f  errmsg.f  fparsei.f  fparser.f  gbyte.f  gbytes.f  getbit.f  getgb.f  getgb1.f  getgb1r.f  getgb1re.f  getgb1s.f  getgbe.f  getgbeh.f  getgbem.f  getgbemh.f  getgbemn.f  getgbemp.f  getgbens.f  getgbep.f  getgbex.f  getgbexm.f  getgbh.f  getgbm.f  getgbmh.f  getgbmp.f  getgbp.f  getgi.f  getgir.f  gtbits.f  idsdef.f  instrument.f  isrchne.f  iw3jdn.f  iw3mat.f  iw3pds.f  iw3unp29.f  ixgb.f  (+160 more)
tests/: CMakeLists.txt  test_aea.F90  test_errexit.F90  test_errexit.sh  test_errmsg.F90  test_errmsg.sh  test_fparsei.F90  test_fparser.F90  test_gbyte.F90  test_gbytec.F90  test_getgbemh.F90  test_mkfldsep.F90  test_w3fi71.F90  test_w3fi74.F90
tests/data/baseline/: aea  getgbemh
